# app/Docs/route.php
@@ -4,28 +4,294 @@
 *      path="/api/courses",
 *      operationId="courses",
 *      tags={"Courses"},
-*      summary="取得所有課程",
-*      description="取得所有課程",
+*      summary="取得所有課程資訊",
+*      description="取得所有課程資訊",
 *      @OA\Response(
 *          response=200,
 *          description="請求成功"
 *       )
 * )
-* Returns list of courses
-*/
-
-/**
+*
 * @OA\Get(
-*      path="/api/course/{id}",
-*      operationId="course",
-*      tags={"Course"},
-*      summary="取得課程詳情",
-*      description="取得課程詳情",
+*      path="/api/courses/{courseId}",
+*      operationId="courses",
+*      tags={"Courses"},
+*      summary="取得一筆課程資訊",
+*      description="取得一筆課程資訊",
 *      @OA\Parameter(
-*          name="id",
-*          description="Course id",
+*          name="courseId",
+*          description="courseId",
 *          required=true,
 *          in="path",
+*          @OA\Schema(
+*              type="integer"
+*          )
+*      ),
+*      @OA\Response(
+*          response=200,
+*          description="請求成功"
+*       ),
+*      @OA\Response(
+*          response=404,
+*          description="找不到對應課程"
+*       )
+* )
+* @OA\Post(
+*      path="/api/courses",
+*      operationId="courses",
+*      tags={"Courses"},
+*      summary="新增課程資訊",
+*      description="新增課程資訊",
+*      @OA\Parameter(
+*          name="name",
+*          description="課程名稱",
+*          required=true,
+*          in="query",
+*          @OA\Schema(
+*              type="string"
+*          )
+*      ),
+*      @OA\Parameter(
+*          name="description",
+*          description="描述",
+*          required=false,
+*          in="query",
+*          @OA\Schema(
+*              type="string"
+*          )
+*      ),
+*      @OA\Parameter(
+*          name="outline",
+*          description="大綱",
+*          required=false,
+*          in="query",
+*          @OA\Schema(
+*              type="string"
+*          )
+*      ),
+*      @OA\Response(
+*          response=200,
+*          description="資源成功建立"
+*       ),
+*      @OA\Response(
+*          response=422,
+*          description="驗證錯誤"
+*       )
+* )
+* @OA\Patch(
+*      path="/api/courses/{courseId}",
+*      operationId="courses",
+*      tags={"Courses"},
+*      summary="更新課程資訊",
+*      description="更新課程資訊",
+*      @OA\Parameter(
+*          name="name",
+*          description="課程名稱",
+*          required=false,
+*          in="query",
+*          @OA\Schema(
+*              type="string"
+*          )
+*      ),
+*      @OA\Parameter(
+*          name="description",
+*          description="描述",
+*          required=false,
+*          in="query",
+*          @OA\Schema(
+*              type="string"
+*          )
+*      ),
+*      @OA\Parameter(
+*          name="outline",
+*          description="大綱",
+*          required=false,
+*          in="query",
+*          @OA\Schema(
+*              type="string"
+*          )
+*      ),
+*      @OA\Response(
+*          response=200,
+*          description="請求成功"
+*       ),
+*      @OA\Response(
+*          response=404,
+*          description="資源不存在"
+*       )
+* )
+* @OA\Delete(
+*      path="/api/courses/{courseId}",
+*      operationId="courses",
+*      tags={"Courses"},
+*      summary="刪除課程資訊",
+*      description="刪除課程資訊",
+*      @OA\Parameter(
+*          name="courseId",
+*          description="courseId",
+*          required=true,
+*          in="path",
+*          @OA\Schema(
+*              type="integer"
+*          )
+*      ),
+*      @OA\Response(
+*          response=200,
+*          description="刪除成功"
+*       ),
+*      @OA\Response(
+*          response=404,
+*          description="課程找不到"
+*       )
+* )
+* @OA\Get(
+*      path="/api/exams",
+*      operationId="exams",
+*      tags={"Exams"},
+*      summary="取得所有考試資訊",
+*      description="取得所有考試資訊",
+*      @OA\Response(
+*          response=200,
+*          description="請求成功"
+*       )
+* )
+* @OA\Get(
+*      path="/api/exams/{examId}",
+*      operationId="exams",
+*      tags={"Exams"},
+*      summary="取得一筆考試資訊",
+*      description="取得一筆考試資訊",
+*      @OA\Parameter(
+*          name="examId",
+*          description="examId",
+*          required=true,
+*          in="path",
+*          @OA\Schema(
+*              type="integer"
+*          )
+*      ),
+*      @OA\Response(
+*          response=200,
+*          description="請求成功"
+*       ),
+*      @OA\Response(
+*          response=404,
+*          description="找不到對應考試"
+*       )
+* )
+* @OA\Post(
+*      path="/api/exams",
+*      operationId="exams",
+*      tags={"Exams"},
+*      summary="新增考試資訊",
+*      description="新增考試資訊",
+*      @OA\Parameter(
+*          name="student_id",
+*          description="學生id",
+*          required=true,
+*          in="query",
+*          @OA\Schema(
+*              type="integer"
+*          )
+*      ),
+*      @OA\Parameter(
+*          name="course_id",
+*          description="課程id",
+*          required=true,
+*          in="query",
+*          @OA\Schema(
+*              type="integer"
+*          )
+*      ),
+*      @OA\Parameter(
+*          name="exam_id",
+*          description="考試id",
+*          required=true,
+*          in="query",
+*          @OA\Schema(
+*              type="integer"
+*          )
+*      ),
+*      @OA\Parameter(
+*          name="exam_score",
+*          description="考試成績",
+*          required=true,
+*          in="query",
+*          @OA\Schema(
+*              type="integer"
+*          )
+*      ),
+*      @OA\Response(
+*          response=200,
+*          description="考試資訊新增成功"
+*       ),
+*      @OA\Response(
+*          response=422,
+*          description="驗證錯誤"
+*       )
+* )
+* @OA\Delete(
+*      path="/api/exams/{examId}",
+*      operationId="exams",
+*      tags={"Exams"},
+*      summary="刪除考試資訊",
+*      description="刪除考試資訊",
+*      @OA\Parameter(
+*          name="examId",
+*          description="examId",
+*          required=true,
+*          in="path",
+*          @OA\Schema(
+*              type="integer"
+*          )
+*      ),
+*      @OA\Response(
+*          response=200,
+*          description="刪除成功"
+*       ),
+*      @OA\Response(
+*          response=404,
+*          description="考試找不到"
+*       )
+* )
+* @OA\Patch(
+*      path="/api/exams/{examId}",
+*      operationId="exams",
+*      tags={"Exams"},
+*      summary="更新考試資訊",
+*      description="更新考試資訊",
+*      @OA\Parameter(
+*          name="student_id",
+*          description="學生id",
+*          required=false,
+*          in="query",
+*          @OA\Schema(
+*              type="integer"
+*          )
+*      ),
+*      @OA\Parameter(
+*          name="course_id",
+*          description="課程id",
+*          required=false,
+*          in="query",
+*          @OA\Schema(
+*              type="integer"
+*          )
+*      ),
+*      @OA\Parameter(
+*          name="exam_id",
+*          description="考試id",
+*          required=false,
+*          in="query",
+*          @OA\Schema(
+*              type="integer"
+*          )
+*      ),
+*      @OA\Parameter(
+*          name="exam_score",
+*          description="考試成績",
+*          required=false,
+*          in="query",
 *          @OA\Schema(
 *              type="integer"
 *          )
@@ -39,5 +305,4 @@
 *          description="資源不存在"
 *       )
 * )
-* Show course content
 */
